objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>ChimpSync__Last_sync__c</fullName>
        <label>Last ChimpSync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ChimpSync__MailChimp_Campaign_URL__c</fullName>
        <label>MailChimp Campaign URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ChimpSync__MailChimp_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MailChimp List</label>
        <referenceTo>ChimpSync__MailChimp_List__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChimpSync__Segmentation__c</fullName>
        <label>Segmentation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChimpSync__Sync_Member_Activity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Member Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChimpSync__mailchimp_campaign_id__c</fullName>
        <label>MailChimp Campaign ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Days__c</fullName>
        <defaultValue>7</defaultValue>
        <description>This is used for the &quot;Perfect Data&quot; SE tool</description>
        <label>DB Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__Old_Name__c</fullName>
        <label>Old Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORGCUSTOM4_DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ORGCUSTOM4_DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ORGCUSTOM4_OLD_NAME__c</fullName>
        <label>ORGCUSTOM4_OLD_NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>